--- a/ZZZ/styles/cabeçalho.css
+++ b/ZZZ/styles/cabeçalho.css
@@ -1,13 +1,13 @@
 .cabeçalho{
-    background: linear-gradient(rgba(150, 149, 27, 0.5), rgba(150, 149, 27, 0.5)),
-    url("../imagens/carro_germanico.jpg");/*separar imaagem do gradiente de cor*/
-    /*para uma cor mais viva mude para rgba(150, 149, 27, 0.5)*/
+    background: linear-gradient(#fefefe00, #f8f8f800),
+    url("../imagens/top.png");/*separar imaagem do gradiente de cor*/
     background-size: cover ;/*cobrir a área do cabeçalho*/
     background-position: center;/*centraliar imagem*/
     width: 100%;
     height: 300px;
-    color: #ffffff;
+    color: #ffffff00;
     text-align: center;
+    text-shadow: 0px 10px 15px rgba(255, 255, 255, 0);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -26,9 +26,16 @@
 }
 .botao{
     padding: 15px 30px;
-    background-color: #28a745;
-    color: #fff;
-    text-decoration: none;
+    background-color: #3b3b3b00;
+    color: #ffffff;
     border-radius: 5px;
     font-size: 10px;
+    text-shadow: none;
+}
+
+.botao:hover{
+    transform: translateY(-8px) scale(1.5);
+    background-color: #29292900;
+    box-shadow: 0 0 10px #000000;
+    text-decoration:underline;
 }
