--- a/ZZZ/styles/carrossel.css
+++ b/ZZZ/styles/carrossel.css
@@ -6,12 +6,12 @@
 }
 
 .carousel{
-    max-width:700px;
+    max-width:800px;
     margin:auto;
 }
 
 .carousel-caption{
-    background-color: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0);
     padding: 10px;
 }
 
@@ -25,7 +25,7 @@
 }
 
 .contato{
-    padding: 10px;
+    padding: 20px;
 }
 
 .carousel-control-prev-icon, 
@@ -37,11 +37,11 @@
             .carousel-control-prev,
             .carousel-control-next{
                 width: 10%;
-                color: white;
+                color: rgb(0, 0, 0);
             }
             .carousel-control-prev{
                 left: -5%;
             }
             .carousel-control-next{
-
+                right: -5%;
             }
